--- a/frontend/src/stylesheets/global.scss
+++ b/frontend/src/stylesheets/global.scss
@@ -7,6 +7,8 @@
 
     --border-radius: 8px;
     --border-radius-large: 12px;
+
+    --max-width: 150rem;
 }
 
 html {
@@ -26,6 +28,20 @@ body {
     -moz-osx-font-smoothing: grayscale;
     font-size: 1.6rem;
     color: var(--color-1-800);
+}
+
+p,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+pre {
+    margin: 0;
+}
+
+li {
+    list-style-type: none;
 }
 
 * {
