--- a/frontend/src/stylesheets/global.scss
+++ b/frontend/src/stylesheets/global.scss
@@ -1,14 +1,21 @@
 /* stylelint-disable custom-property-empty-line-before, color-no-hex, color-named */
 :root {
-    --color-1-100: #151515;
+    --color-primary: #3f25d2;
+    --color-border: #c7c7c7;
+    --color-text-primary: #1a1919;
+    --color-text-secondary: #423f3f;
+    --color-button-label: #f5f5f5;
 
-    --gap: 1.2rem;
-    --gap-small: 1.8rem;
+    --gap-large: 4rem;
+    --gap: 2rem;
+    --gap-small: 1rem;
 
-    --border-radius: 8px;
-    --border-radius-large: 12px;
+    --border-radius: 6px;
+    --border-radius-large: 10px;
 
-    --max-width: 150rem;
+    --container-max-width: 150rem;
+    --form-max-width: 50rem;
+    --ui-element-height: 4.5rem;
 }
 
 html {
@@ -18,16 +25,11 @@ html {
 }
 
 body {
-    position: relative;
-    display: block;
     margin: 0;
-    background-color: var(--color-1-800);
-    transition: background-color 0.4s;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 1.6rem;
-    color: var(--color-1-800);
 }
 
 p,
@@ -36,17 +38,29 @@ ul {
     padding: 0;
 }
 
-pre {
-    margin: 0;
-}
-
 li {
     list-style-type: none;
 }
 
+button,
+input {
+    padding: 0;
+    border: none;
+    background: none;
+    -webkit-appearance: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor: not-allowed;
+}
+
 * {
     box-sizing: inherit;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.6px;
     font-family: "Inter", -apple-system, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
