--- a/frontend/src/components/layout/content/Content.module.scss
+++ b/frontend/src/components/layout/content/Content.module.scss
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    max-width: var(--max-width);
+    max-width: var(--container-max-width);
     margin: 0 auto;
     padding: var(--gap);
 }
