--- a/frontend/src/components/UI/modal/Modal.module.scss
+++ b/frontend/src/components/UI/modal/Modal.module.scss
@@ -1,3 +1,5 @@
+@use "stylesheets/animations";
+
 .backdrop {
     position: fixed;
     top: 0;
@@ -12,7 +14,7 @@
     padding: var(--gap);
     background-color: rgb(0 0 0 / 0%);
     transition: background-color 0.5s;
-    animation: fadein 0.5s forwards;
+    animation: fade-in 0.5s forwards;
     overflow: auto;
     z-index: 1002;
 }
@@ -26,7 +28,7 @@
     box-shadow: var(--shadow-light);
     transition: max-width 0.4s;
     will-change: max-width;
-    animation: enter 0.5s;
+    animation: fade-in-from-top 0.5s;
     z-index: 1002;
 }
 
@@ -71,7 +73,7 @@
 }
 
 .disappear {
-    animation: exit 0.5s forwards;
+    animation: fade-out-from-bottom 0.5s forwards;
 }
 
 .fadeout {
@@ -87,42 +89,4 @@
     align-items: center;
     gap: var(--gap-small);
     margin-top: var(--gap-medium);
-}
-
-@keyframes fadein {
-    to {
-        background-color: rgb(65 78 105 / 80%);
-    }
-}
-
-@keyframes enter {
-    0% {
-        transform: translateY(2rem);
-        opacity: 0;
-    }
-
-    80% {
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-@keyframes exit {
-    0% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-
-    20% {
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(2rem);
-        opacity: 0;
-    }
 }
