--- a/frontend/src/components/UI/button/Button.module.scss
+++ b/frontend/src/components/UI/button/Button.module.scss
@@ -1,18 +1,37 @@
-.button {
+.base {
     width: 100%;
-    height: var(--ui-element-height);
-    min-width: 12rem;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: var(--gap-small);
     border-radius: var(--border-radius);
-    background-color: var(--color-primary);
-    transition: border 0.2s, background-color 0.2s;
+    transition: background-color 0.2s;
     white-space: nowrap;
     user-select: none;
     font-size: 1.6rem;
     font-weight: 500;
     color: var(--color-button-label);
     overflow: hidden;
+
+    &:hover {
+        background-color: var(--color-bg-contrast-light);
+    }
+}
+
+.icon {
+    font-size: 2.5rem;
+    color: var(--color-text-primary);
+}
+
+.primary {
+    height: var(--ui-element-height);
+    background-color: var(--color-primary);
+
+    &:hover {
+        background-color: var(--color-primary-dark);
+    }
+}
+
+.inline {
+    width: fit-content;
 }
