--- a/frontend/src/components/UI/dropdown/Dropdown.module.scss
+++ b/frontend/src/components/UI/dropdown/Dropdown.module.scss
@@ -4,13 +4,14 @@
 
 .dropdown {
     position: absolute;
-    top: 5rem;
-    right: 0;
-    padding: 0.5rem;
+    width: fit-content;
+    margin-top: var(--gap-extra-small);
     border-radius: var(--border-radius);
     border: 1px solid var(--color-border);
+    background-color: var(--color-bg-primary);
     box-shadow: var(--shadow-light);
     opacity: 1;
+    z-index: 1;
     cursor: pointer;
 }
 
