--- a/frontend/src/stylesheets/global.scss
+++ b/frontend/src/stylesheets/global.scss
@@ -1,7 +1,8 @@
 /* stylelint-disable custom-property-empty-line-before, color-no-hex, color-named */
 :root {
     --color-primary: #3f25d2;
-    --color-border: #c7c7c7;
+    --color-primary-dark: #331ac0;
+    --color-border: #e2e1e1;
     --color-bg-primary: #fafafa;
     --color-bg-primary-hover: #f1f1f1;
     --color-bg-contrast-light: #eaeaea;
@@ -13,6 +14,7 @@
     --gap-medium: 3rem;
     --gap: 2rem;
     --gap-small: 1rem;
+    --gap-extra-small: 0.5rem;
 
     --border-radius-large: 10px;
     --border-radius: 6px;
@@ -39,6 +41,7 @@ body {
 }
 
 a {
+    color: inherit;
     text-decoration: none;
 }
 
