--- a/frontend/src/components/UI/dropdown/Dropdown.module.scss
+++ b/frontend/src/components/UI/dropdown/Dropdown.module.scss
@@ -4,13 +4,15 @@
 
 .dropdown {
     position: absolute;
-    width: fit-content;
+    width: 25rem;
     margin-top: var(--gap-extra-small);
+    padding: var(--gap-small);
     border-radius: var(--border-radius);
     border: 1px solid var(--color-border);
     background-color: var(--color-bg-primary);
     box-shadow: var(--shadow-light);
     opacity: 1;
+    overflow: hidden;
     z-index: 1;
     cursor: pointer;
 }
@@ -22,11 +24,13 @@
 }
 
 .item {
+    display: flex;
+    align-items: center;
+    gap: var(--gap-extra-small);
     padding: var(--gap-small);
     border-radius: var(--border-radius-small);
     transition: background-color 0.4s, color 0.4s;
     font-size: 1.6rem;
-    font-weight: 600;
     color: var(--color-text-secondary);
 
     &:hover {
@@ -40,4 +44,9 @@
         color: var(--color-text-primary);
         outline: var(--color-primary) solid 0.5px;
     }
+}
+
+.icon {
+    display: flex;
+    font-size: 2.4rem;
 }
