--- a/frontend/src/components/UI/spinner/Spinner.module.scss
+++ b/frontend/src/components/UI/spinner/Spinner.module.scss
@@ -7,7 +7,7 @@
     width: 0.75rem;
     height: 0.75rem;
     border-radius: 50%;
-    background-color: var(--color-bg-primary);
+    background-color: var(--color-bg);
     animation: bounce 1s infinite ease-in-out;
 }
 
