--- a/frontend/src/components/UI/dropdown/Dropdown.module.scss
+++ b/frontend/src/components/UI/dropdown/Dropdown.module.scss
@@ -9,7 +9,7 @@
     padding: var(--gap-small);
     border-radius: var(--border-radius);
     border: 1px solid var(--color-border);
-    background-color: var(--color-bg-primary);
+    background-color: var(--color-surface);
     box-shadow: var(--shadow-light);
     opacity: 1;
     overflow: hidden;
@@ -31,18 +31,18 @@
     border-radius: var(--border-radius-small);
     transition: background-color 0.4s, color 0.4s;
     font-size: 1.6rem;
-    color: var(--color-text-secondary);
+    color: var(--color-text);
 
     &:hover {
-        background-color: var(--color-bg-primary-hover);
-        color: var(--color-text-primary);
+        background-color: var(--color-surface-hover);
+        color: var(--color-text);
     }
 
     &:focus,
     &:focus-visible {
-        background-color: var(--color-bg-primary-hover);
-        color: var(--color-text-primary);
-        outline: var(--color-primary) solid 0.5px;
+        background-color: var(--color-surface-hover);
+        color: var(--color-text);
+        outline: var(--color-primary) solid 1px;
     }
 }
 
