--- a/frontend/src/components/UI/heading/Heading.module.scss
+++ b/frontend/src/components/UI/heading/Heading.module.scss
@@ -1,13 +1,14 @@
 .heading {
     line-height: 1;
-    margin-top: 0;
+    margin-top: var(--gap);
     margin-bottom: var(--gap-large);
     font-size: 3rem;
     font-weight: 900;
+    color: var(--color-text);
 }
 
 [data-remove-margin="true"].heading {
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .large {
