--- a/frontend/src/components/UI/input/Input.module.scss
+++ b/frontend/src/components/UI/input/Input.module.scss
@@ -14,7 +14,7 @@
     border-radius: var(--border-radius);
     border: 1px solid var(--color-border);
     transition: border ease-in-out 0.2s;
-    color: var(--color-text-primary);
+    color: var(--color-text);
     outline: none;
 
     &:focus {
@@ -27,6 +27,6 @@
 
     &::placeholder {
         font-size: 1.6rem;
-        color: var(--color-text-secondary);
+        color: var(--color-text-muted);
     }
 }
