--- a/frontend/src/components/layout/sidebar/Sidebar.module.scss
+++ b/frontend/src/components/layout/sidebar/Sidebar.module.scss
@@ -1,6 +1,6 @@
 .sidebar {
     border-right: 1px solid var(--color-border);
-    background-color: var(--color-bg-primary);
+    background-color: var(--color-surface);
     transition: all 0.2s ease-in-out;
     overflow-x: hidden;
 }
@@ -39,13 +39,13 @@
     transition: background-color 0.2s ease-in-out;
 
     &:hover {
-        background-color: var(--color-bg-contrast-light);
+        background-color: var(--color-surface-hover);
     }
 }
 
 .linkActive {
     @extend .link;
-    background-color: var(--color-bg-contrast-light);
+    background-color: var(--color-surface-hover);
 }
 
 .icon {
