--- a/frontend/src/components/layout/topBar/TopBar.module.scss
+++ b/frontend/src/components/layout/topBar/TopBar.module.scss
@@ -7,7 +7,7 @@
     align-items: center;
     padding: var(--gap-small);
     border-bottom: 1px solid var(--color-border);
-    background-color: var(--color-bg-primary);
+    background-color: var(--color-surface);
 }
 
 .avatar {
