chore(frontend): improve keyframe and add css color vars

--- a/frontend/src/stylesheets/animations.scss
+++ b/frontend/src/stylesheets/animations.scss
@@ -1,6 +1,10 @@
 @keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
     to {
-        background-color: rgb(65 78 105 / 80%);
+        opacity: 1;
     }
 }
 
