--- a/frontend/src/stylesheets/global.scss
+++ b/frontend/src/stylesheets/global.scss
@@ -21,6 +21,9 @@
     /* Borders & Dividers */
     --color-border: #e4e4e6;
 
+    /* UI */
+    --color-ui-disabled: #57575C;
+
     /* Semantic */
     --color-green: #228c5c;
 
